<resources>
    <string name="app_name">VoQual-Android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="error_internet">Please Check Your Internet Connection.</string>
    <string name="video_limit_message"><b>Please record less then 5 minutes due to high upload time.</b></string>
    <string name="my_participant">My Participants</string>
    <string name="participant">Participant</string>
    <string name="researcher">Researcher</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="keep_me_login">Keep me logged in.</string>
    <string name="submit">Submit</string>
    <string name="do_not_have_account">Don\'t have an account? <u><b>Sign Up</b></u></string>
    <string name="contact_admin">To become researcher please email <u><b>hazelkeedle@gmail.com</b></u></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email Address</string>
    <string name="mobile">Mobile</string>
    <string name="age">Age</string>
    <string name="agree">I agree to provide my details for research purposes.</string>
    <string name="register">Register</string>
    <string name="update">Update</string>
    <string name="my_logs">My Logs</string>
    <string name="all_logs">All Logs</string>
    <string name="user_details">User Details</string>
    <string name="change_password">Change Password</string>
    <string name="researcher_info">Researcher Info</string>
    <string name="logout">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="please_wait">Please Wait…</string>
    <string name="do_you_want_to_add_new_file">Do you want to add new file?</string>
    <string name="record_video">Record Video</string>
    <string name="record_audio">Record Audio</string>
    <string name="stop_recoding">Stop Recording</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="there_is_no_message">There is no message.</string>
    <string name="there_is_no_feedback">There is no feedback.</string>
    <string name="message_to_researcher">Message to Researcher</string>
    <string name="type_your_message_here">Type your message here</string>
    <string name="send">Send</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="total_audio">Audio Recorded time %s.</string>
    <string name="title">Enter your media title here</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name :</string>
    <string name="email_">Email :</string>
    <string name="phone_number">Phone Number :</string>
    <string name="check_connection">Please Check Your Internet Connection.</string>
    <string name="error_audio">Please record audio.</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="crop__wait">Crop Wait</string>
    <string name="crop__saving">Crop Save</string>
    <string name="enter_email">Enter Email</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="privacy_parts">I consent to:\nA written version of my recording, or parts of my recording, may be used in reports, or public discussions of the research (e.g. the transcript might be used or adapted to create a script performed by actors, or may be quoted in presentations)</string>
    <string name="privacy_audio">I consent to:\nMy voice,or parts of my voice recording, may be included in presentations or other public discussions of the research (e.g. the voice recording might be played, in whole or in part, during a presentation)</string>
    <string name="privacy_video">I consent to:\nMy video recording, or parts of my video recording, may be used in presentations or other public discussions of the research (e.g. the video might be played, in whole or in part, during a presentation)</string>
    <string name="privacy_data">I consent to:\nMy recording will be added to a research database, to help identify common themes across people’s stories.</string>
    <string name="customer_support">Customer Support</string>
</resources>