<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_allLogs"
            android:title="@string/all_logs" />
        <item
            android:id="@+id/nav_myParticipate"
            android:title="@string/my_participant" />
        <item
            android:id="@+id/nav_changePass"
            android:title="@string/change_password" />
        <item
            android:id="@+id/nav_customer_support"
            android:title="@string/customer_support"/>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />
    </group>
</menu>
