<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semi_bold"
        android:padding="4dp"
        android:text="@string/name"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/researcher_info"
        android:textSize="16sp" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semi_bold"
        android:padding="4dp"
        android:text="@string/email_"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/researcher_info"
        android:textSize="16sp" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semi_bold"
        android:padding="4dp"
        android:visibility="gone"
        android:text="@string/phone_number"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:paddingLeft="4dp"
        android:visibility="gone"
        android:paddingRight="4dp"
        android:text="@string/researcher_info"
        android:textSize="16sp" />
</LinearLayout>