<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:visibility="gone"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/radio_selector"
        android:checkedButton="@+id/offer"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbResearcher"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_background"
            android:button="@null"
            android:checked="true"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/researcher"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/rbParticipate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_background"
            android:button="@null"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/participant"
            android:textColor="@color/colorAccent" />
    </RadioGroup>

    <TextView
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/participant"
        android:textColor="@color/white"
        android:padding="6dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:fontFamily="@font/montserrat_semi_bold"
        android:background="@drawable/corner"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_logo" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/username"
                android:inputType="text"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/cbKeepLogged"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/keep_me_login" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/submit"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_forgot_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:fontFamily="@font/montserrat_regular"
            android:padding="6dp"
            android:visibility="gone"
            android:text="@string/forgot_password" />




        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:padding="6dp"
            android:text="@string/do_not_have_account"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvContactAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:fontFamily="@font/montserrat_regular"
            android:padding="6dp"
            android:text="@string/contact_admin" />





    </LinearLayout>

</LinearLayout>